nullaway_error_A9A6C4F4-231B-4742-96CE-7D8C365204F2.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/validation/DataBinder.java:1039: error: [NullAway] dereferenced expression this.targetType is @Nullable
		if (this.targetType.getSource() instanceof MethodParameter parameter) {
		                   ^
    (see http://t.uber.com/nullaway )
